# studielan

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yaml  pyproject.toml
app/: config.py  db.py  main.py  models.py
app/services/: cbonds.py  finansportalen.py  finansportalen_history.py  lanekassen.py  seb.py  weekly_avg.py
app/templates/: base.html  dashboard.html
app/templates/partials/: bank_rate_chart.html  bank_rates_summary.html  banker.html  besparelse.html  flytende_vs_fast.html  lanekassen.html  rates_overview.html  swap_chart.html  swap_rates.html  vurdering.html  weekly_observations.html
infra/coolify/: coolify.sh
tests/: test_bank_history.py  test_cbonds.py  test_lanekassen.py  test_seb.py
